--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PopMovie</string>
     <string name="add_it_favourite">Add it Favourite</string>
+    <string name="RemoveButton">Remove From Favourit</string>
+    <string name="AddButton">Add To Favourit</string>
 </resources>
